--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,7 @@
 pulsar.consumer.default.ack-timeout-ms=1000
 pulsar.consumer.default.dead-letter-policy-max-redeliver-count=1
 
+pulsar.transactionCoordinatorEnabled=true
+
 #Custom Topics
 my.custom.topic.name=custom-topic-name-from-app-prop
