Unwrapped consumer exceptions.

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -9,3 +9,6 @@ my.custom.consumer.name=custom-consumer-name-from-app-prop
 
 #Interceptor
 pulsar.allow-interceptor=true
+
+logging.level.root=INFO
+logging.level.io.github.majusko.pulsar=INFO
