Fixed issue with javadocs.

--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,9 @@
 					<value>true</value>
 				</property>
 			</activation>
+			<properties>
+				<doclint>none</doclint>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
@@ -161,6 +164,9 @@
 								<goals>
 									<goal>jar</goal>
 								</goals>
+								<configuration>
+									<additionalparam>${javadoc.opts}</additionalparam>
+								</configuration>
 							</execution>
 						</executions>
 					</plugin>
