--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>io.github.majusko</groupId>
 	<artifactId>pulsar-java-spring-boot-starter</artifactId>
-	<version>1.1.3-SNAPSHOT</version>
+	<version>1.2.0</version>
 	<name>pulsar-java-spring-boot-starter</name>
 	<description>Pulsar connect for Spring Boot</description>
 
@@ -133,6 +133,9 @@
 					<value>true</value>
 				</property>
 			</activation>
+			<properties>
+				<doclint>none</doclint>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
@@ -161,6 +164,9 @@
 								<goals>
 									<goal>jar</goal>
 								</goals>
+								<configuration>
+									<additionalparam>${javadoc.opts}</additionalparam>
+								</configuration>
 							</execution>
 						</executions>
 					</plugin>
