--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,4 +1,4 @@
-name: "Code Scanning - Action"
+name: CodeQL Scanning
 
 on:
   push:
@@ -24,7 +24,6 @@ jobs:
         with:
           java-version: 17
 
-      # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
